Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8353

[C++] is_nullable maybe not initialized in parquet writer

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.17.0
    • C++

    Description

      From the Rtools build:

      [ 84%] Building CXX object src/parquet/CMakeFiles/parquet_static.dir/column_reader.cc.obj
      In file included from D:/a/arrow/arrow/cpp/src/arrow/io/concurrency.h:23:0,
                       from D:/a/arrow/arrow/cpp/src/arrow/io/memory.h:25,
                       from D:/a/arrow/arrow/cpp/src/parquet/platform.h:25,
                       from D:/a/arrow/arrow/cpp/src/parquet/arrow/writer.h:23,
                       from D:/a/arrow/arrow/cpp/src/parquet/arrow/writer.cc:18:
      D:/a/arrow/arrow/cpp/src/arrow/result.h: In member function 'virtual arrow::Status parquet::arrow::FileWriterImpl::WriteColumnChunk(const std::shared_ptr<arrow::ChunkedArray>&, int64_t, int64_t)':
      D:/a/arrow/arrow/cpp/src/arrow/result.h:428:28: warning: 'is_nullable' may be used uninitialized in this function [-Wmaybe-uninitialized]
         auto result_name = (rexpr);                               \
                                  ^
      D:/a/arrow/arrow/cpp/src/parquet/arrow/writer.cc:430:10: note: 'is_nullable' was declared here
           bool is_nullable;
                ^
      

      I'd give it a default value, but IDK that it's that simple.

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              npr Neal Richardson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h