ARROW-8353: [C++] Fix some compiler warnings in release builds

This makes the release builds a little quieter.

Closes #6853 from wesm/ARROW-8353

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>